# storm

./: .gitignore  .gitmodules  Cargo.toml  profile.json
examples/: autoencoder.rs  mnist.rs  mnist_gan.rs  stable_diffusion.rs  xor.rs
src/: arg.rs  dtype.rs  lazy.rs  lib.rs  macros.rs  main.rs  ops.rs  utils.rs
src/codegen/: kernel.rs  linearizer.rs  mod.rs
src/device/: cuda.rs  mod.rs  opencl.rs  wgpu.rs
src/nn/: mod.rs
src/nn/optim/: mod.rs
src/renderer/: cstyle.rs  mod.rs
src/shape/: mod.rs
src/shape/shapetracker/: mod.rs  util.rs  view.rs
src/shape/symbolic/: core_ops.rs  mod.rs
src/tensor/: core_ops.rs  mlops.rs  mod.rs  shape.rs
tests/: shapetracker.rs  symbolic.rs  tensor.rs
