[package]
name = "storm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.16"
half = { version = "2.3.1", features = ["num-traits", "rand_distr", "zerocopy"] }
itertools = "0.12.0"
kdam = "0.5.1"
lazy_static = "1.4.0"
num-traits = "0.2.17"
opencl3 = "0.9.4"
rand = "0.8.5"

[dev-dependencies]
float-cmp = "0.9.0"
mnist = { git = "https://github.com/allen-dai/mnist" }
