[package]
name = "storm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
dyn-clone = "1.0.16"
half = { version = "2.3.1", features = ["num-traits", "rand_distr", "zerocopy"] }
itertools = "0.12.0"
kdam = "0.5.1"
lazy_static = "1.4.0"
memmap2 = "0.9.4"
ndarray = "0.15.6"
num-traits = "0.2.17"
opencl3 = "0.9.4"
rand = "0.8.5"
safetensors = "0.4.2"

[target.'cfg(target_arch = "x86_64")'.dependencies]
cudarc = "0.10.0"

[dev-dependencies]
float-cmp = "0.9.0"
image = "0.24.7"
mnist = { git = "https://github.com/allen-dai/mnist" }
regex = "1.10.3"
sdl2 = "0.36.0"
serde_json = "1.0.113"
show-image = "0.13.1"
